<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"




    >
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"

       >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"


            >



        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            >

           <ImageView
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:src="@mipmap/rsz_diagram_logo"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DiaGram"
                android:textSize="35sp"
                android:layout_gravity="center_horizontal"

                android:layout_marginTop="5dp"

                />
        </LinearLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="Username"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="Password"
            android:singleLine="true"

            />

        <Button
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="go"
            android:textColor="#FFFF"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/redoval"
            android:layout_marginTop="15dp"

            />
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="20dp"
           android:layout_gravity="center_horizontal"
           >

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Haven't signed up yet?"
               android:layout_gravity="center_horizontal"
               />

           <TextView
               android:id="@+id/sign_up"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=" Sign up."
               android:textColor="@color/colorPrimary"

               />
       </LinearLayout>


        </LinearLayout>



    </android.support.v7.widget.CardView>


</RelativeLayout>