<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CommentsActivity">


    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        tools:context=".view.CommentsActivity"
        android:id="@+id/swipe_to_refresh"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_comments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/add_comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="2dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/comment"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="5"
            android:gravity="top|left"
            android:inputType="textMultiLine|textCapSentences"
            android:scrollHorizontally="false"
            android:hint="Add Comment..."


             />

        <Button
            android:id="@+id/add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="POST"
            android:textAppearance="?android:attr/textAppearanceMedium"


            />
    </LinearLayout>


</RelativeLayout>