<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.AddPostFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Title"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <EditText
                    android:id="@+id/title"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="Enter Title"
                    android:singleLine="true"
                    />
                -->
                <ImageView
                    android:id="@+id/title_image"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/ic_edit_black_24dp"


                    />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Post"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/post"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="Enter Your Concerns"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="6"
                    />


                <ImageView
                    android:id="@+id/help"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/ic_live_help_black_24dp"

                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"

        android:layout_marginBottom="65dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_send_black_24dp"
        app:backgroundTint="@color/colorWhite"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"


        />





</RelativeLayout>